--- a/examples/nevyn/fidogate.conf
+++ b/examples/nevyn/fidogate.conf
@@ -1,10 +1,10 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.8 1999/10/04 08:18:17 mj Exp $
+# $Id: fidogate.conf,v 1.1 1999/10/04 08:18:16 mj Exp $
 #
-# NEW!!! (FIDOGATE 4.3.0+) single common config file
+# NEW!!! (FIDOGATE 4.3.5) single common config file
 #
-# orodruin.fido.de
+# morannon.fido.de (Fido.DE domain gateway)
 #
 # Format:  keyword arg ...
 #          keyword and args may be put in double quotes "..."
@@ -27,7 +27,6 @@ BTBASEDIR	/var/spool/bt
 INBOUND		%B/in
 PINBOUND	%B/pin
 UUINBOUND	%B/uuin
-#FTPINBOUND	%B/ftpin
 
 # files		
 ALIASES		%C/aliases
@@ -50,10 +49,10 @@ LogLevel	notice
 # MSDOS client drive to UNIX server directory translation. This allows
 # FIDOGATE running on a UNIX system and BinkleyTerm on an MSDOS or OS2 PC.
 #
-#DosDrive	H:	/home
-#DosDrive	I:	/var/spool
-#DosDrive	P:	/u1
-#DosDrive	Q:	/u2
+DosDrive	H:	/home
+DosDrive	I:	/var/spool
+DosDrive	I:	/usr/spool
+DosDrive	P:	/pub
 
 
 # AREAS.BBS EchoMail distribution list
@@ -69,8 +68,10 @@ FAreasBBS	%V/fareas.bbs
 ##############################################################################
 
 # hostname and domain
-Hostname	orodruin
-Domain		.fido.de
+#Hostname	morannon
+#Domain		.fido.de
+Hostname	nevyn
+Domain		.faho.rwth-aachen.de
 # optional domain name for entries in HOSTS file
 HostsDomain	.fido.de
 
@@ -80,12 +81,22 @@ HostsDomain	.fido.de
 # F I D O N E T   A D D R E S S E S                                          #
 ##############################################################################
 
-Address		2:2452/110.2
-Address		242:1000/5
+Address		2:2452/110
+Address		2:2452/111
+Address		242:1000/1
+Address		242:1000/2
+Address		242:1000/0
+Address		124:1249/9999
+Address		44:4932/605
 
 # optional (different) gateway address, same as `ADDRESS' if missing
-#GateAddress	2:2452/110.2
-#GateAddress	242:1000/5
+GateAddress	2:2452/110.1
+GateAddress	2:2452/110.1
+GateAddress	242:4900/99
+GateAddress	242:4900/99
+GateAddress	242:4900/99
+GateAddress	124:1249/9999.1
+GateAddress	44:4932/605
 
 
 # zones and domains, the outbound directory is relative to the one
@@ -93,18 +104,17 @@ Address		242:1000/5
 #
 #	zone	Internet domain		FTN domain	Outbound
 #	----	---------------		----------	--------
-Zone	default	.Fido.DE		FidoDE		-
+Zone	default	.Fido.DE		fidode		-
 
-Zone	1	.fidonet.org		FidoNet		out.001
-Zone	2	.fidonet.org		FidoNet		out
-Zone	3	.fidonet.org		FidoNet		out.003
-Zone	4	.fidonet.org		FidoNet		out.004
-Zone	5	.fidonet.org		FidoNet		out.005
-Zone	6	.fidonet.org		FidoNet		out.006
-
-Zone	21	.gernet.heise.de	GerNet		out.015
-
-Zone	242	.Fido.DE		FidoDE		out.0f2
+Zone	1	.fidonet.org		fidonet		out.001
+Zone	2	.fidonet.org		fidonet		out
+Zone	3	.fidonet.org		fidonet		out.003
+Zone	4	.fidonet.org		fidonet		out.004
+Zone	5	.fidonet.org		fidonet		out.005
+Zone	6	.fidonet.org		fidonet		out.006
+Zone	21	.gernet.heise.de	gernet		out.015
+Zone    124     .cm.org                 cm              out.07c
+Zone	242	.Fido.DE		fidode		out.0f2
 
 
 
@@ -116,7 +126,7 @@ Zone	242	.Fido.DE		FidoDE		out.0f2
 AreaFixMailer	/usr/sbin/sendmail -t
 
 # CC of reply mails
-#AreaFixCc	postmaster@orodruin.fido.de
+#AreaFixCc	postmaster@morannon.fido.de
 
 # Location of help file
 AreaFixHelp	%L/areafix.help
@@ -130,17 +140,17 @@ AreaFixHelp	%L/areafix.help
 #
 # Maximum number of messages to toss before closing output packets/
 # exiting ftntoss.
-MaxMsg		400
+MaxMsg		2000
 
 # Maximum number of concurrently open files (OS dependent)
 MaxOpenFiles	40
 
 # Maximum size of ArcMail archives (KByte)
-MaxArc		2048
+MaxArc		3000
 
 # Minimum free disk space (KByte)
 #
-DiskFreeMin	10240
+DiskFreeMin	32000
 
 # Disk free method
 #
@@ -161,15 +171,15 @@ KillEmpty
 
 # Kill EchoMail for unknown areas
 # (default: saved in bad packet)
-#KillUnknown
+KillUnknown
 
 # Kill routed EchoMail
 # (default: saved in bad packet)
-#KillRouted
+KillRouted
 
 # Kill insecure EchoMail (sender not listed in areas.bbs)
 # (default: saved in bad packet)
-#KillInsecure
+KillInsecure
 
 # Log sender/recipient of all NetMail messages
 LogNetMail
@@ -180,20 +190,20 @@ CheckPath
 # Kill EchoMail with circular ^APATH (looking for our own AKA),
 # if CheckPath is enabled
 # (default: saved in bad packet)
-#KillCircular
+KillCircular
 
 # Enable dupe check using MSGID history database
 DupeCheck
 
 # Number of days a MSGID entry stays in the history database
 # (decimal fraction allowed)
-MaxHistory 28
+MaxHistory 14
 
 # Kill old messages (date < now - MaxHistory) (= treat as dupe)
-KillOld
+#KillOld
 
 # Kill dupe messages
-#KillDupe
+KillDupe
 
 # Kill messages without ^AMSGID (= treat as dupe)
 #KillNoMSGID
@@ -232,11 +242,11 @@ KillOld
 
 # Default outbound flavor for files forwarded by ftntick
 #
-TickFlav	"Normal"
+TickFlav	"Hold"
 
 # Default outbound flavor for file attaches by ftnfattach
 #
-FAttachFlav	"Normal"
+FAttachFlav	"Hold"
 
 #
 # Directory for old files replaced by ftntick with new versions
@@ -255,20 +265,16 @@ UnknownTickArea UNKNOWN
 ##############################################################################
 
 # Default origin line for EchoMail messages
-Origin		"Martin Junius' orodruin.fido.de"
+Origin		"Fido.DE domain gateway"
 
 # Organization header for News
-Organization	"Martin Junius' orodruin.fido.de"
+Organization	"Fido.DE domain gateway (Moving Bits e.V. / IN e.V.)"
 
 # Use text from * Origin line for Organization header
 #UseOriginForOrganization
 
 # Use text from Organization header for * Origin line
 #UseOrganizationForOrigin
-
-# Use text from X-FTN-Tearline, X-Mailer, User-Agent, X-Newsreader header
-# for --- tearline
-#UseXHeaderForTearline
 
 # Use FTN to address for mail addressed to the gateway without a To
 # line, e.g. mail to
@@ -295,7 +301,7 @@ Organization	"Martin Junius' orodruin.fido.de"
 # into problems with this kind of EchoMail message, please change the
 # code in rfc2ftn.c:print_origin().
 #
-EchoMail4D
+#EchoMail4D
 
 # FTN - Internet gateway. If set, Internet mail will be routed via FTN
 # and this gateway. (USE ONLY FOR POINT SYSTEMS!!!)
@@ -327,26 +333,24 @@ KillUnknownMSGIDZone
 #     S    X-FTN-Seen-By
 #     P    X-FTN-Path
 #
-#X-FTN		ftTOVDSP
-X-FTN		ftTOVD
+X-FTN		ftTOVDSP
 
 
 # Maximum size of FTN messages (default value) for splitting
-#MaxMsgSize		15000
-MaxMsgSize		32000
+MaxMsgSize		31000
 
 # Limit message size for gateway, bigger messages will be bounced/not gated
-#LimitMsgSize		256000
+LimitMsgSize		2048000
 
 
 # Do not allow RFC addresses (chars !, %, @) in FTN to field
 #NoAddressInToField
 
 # CC of bounced messages
-BounceCCMail		postmaster@orodruin.fido.de
+BounceCCMail		admin-bounce@morannon.fido.de
 
 # Send mail from message trackers to
-TrackerMail		postmaster@orodruin.fido.de
+TrackerMail		admin-bounce@morannon.fido.de
 
 # Restrict gateway usage to FTN nodes registered in HOSTS
 HostsRestricted
@@ -355,7 +359,7 @@ HostsRestricted
 FTNJunkGroup		fido.junk
 
 # Errors-To header
-#Errors-To		postmaster@orodruin.fido.de
+#Errors-To		postmaster@morannon.fido.de
 
 
 # Translation of chars for automatic areas <-> newsgroup conversion
@@ -383,7 +387,7 @@ AreasXlate		_		-
 RFCLevel		1
 
 # Don't generate From: line at beginning of text body.
-NoFromLine
+#NoFromLine
 
 # Don't generate FSC-0035 kludges (^AREPLYADDR, ^AREPLYTO)
 #NoFSC0035
@@ -397,7 +401,7 @@ NoFromLine
 # sendmail program path and parameters
 #
 #    %s is replaced with the envelope sender
-FTNInSendmail	/usr/sbin/sendmail -odb -oee -oi -f%s -pFIDOGATE:orodruin-ftn.fido.de -t
+FTNInSendmail	/usr/sbin/sendmail -odb -oee -oi -f%s -pFIDOGATE:gate.fido.de -t
 
 # rnews program path
 FTNInRnews	/usr/bin/rnews
@@ -426,7 +430,7 @@ DontUseReplyTo
 #
 #    (), p, 0   -    user@do.main (Real Name)
 #    <>, a, 1   -    Real Name <user@do.main>
-RFCAddrMode <>
+RFCAddrMode ()
 
 # Force ^AREPLYADDR to only contain ^AREPLYADDR <user@do.main>
 # to be compatible with ifmail-TX
@@ -435,35 +439,29 @@ RFCAddrMode <>
 
 # Check areas.bbs when gating newsgroups, messages for areas without
 # downlinks in areas.bbs will be skipped.
-#CheckAreasBBS
+CheckAreasBBS
 
 
 # Charset mapping
 #
 # Format	default:ftn:rfc
 #		            ^^^ charset in RFC message, when gating FTN->RFC
-#                               use RFC 2045 charset names!
 #		        ^^^---- charset in FTN message, when gating RFC->FTN
-#                               use FSC-0054 names!
 #		^^^^^^^-------- charset assumed for FTN message, if no
 #				^ACHRS kludge is present
 #
 # Default charset mapping, if NetMailCharset or -C is not set
-DefaultCharset	x-ibmpc:latin-1:iso-8859-1
+DefaultCharset	x-ibmpc:iso-8859-1:iso-8859-1
 
 # Charset mapping for NetMail
-NetMailCharset	x-ibmpc:latin-1:iso-8859-1
-
-# If set and no matching in/out charset is found, ftn2rfc will use
-# the first charset translation pair from charset.map with
-# in charset = Fido ^ACHRS
-NetMailCharsetUse1st
+NetMailCharset	x-ibmpc:iso-8859-1:iso-8859-1
 
 
 # The STRING which FIDOGATE's ftn2rfc adds to the Path header,
 # normally "not-for-mail". If gated messages are not generally
 # exported to the Usenet, setting it to "fidogate!not-for-mail" makes
 # the INN newsfeeds entry easier and less error-prone.
+#NewsPathTail	"not-for-mail"
 NewsPathTail	"fidogate!not-for-mail"
 
 
@@ -484,13 +482,8 @@ Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]*) (writes|wrote|schreibt|schrieb)
 Regex1stLine  ^On ..., .. ... .... ..:..:.. [+\-]...., (.*) (writes|wrote|schreibt|schrieb):$
 Regex1stLine  ^On .. ... .... ..:..:.. [+\-]...., (.*) (writes|wrote|schreibt|schrieb):$
 # This is very generic, thus it must be the last entry.
-# If this regex yields too many errors, comment it.
+# If this regex yields too many errors, comment it out.
 Regex1stLine  ^[ 	]*([^>|].*) (writes|wrote|schreibt|schrieb):$
-
-
-# Line length for formatting long paragraphs in Fido messages
-# (replaces old MAX_LINELEN from config.h)
-MessageLineLength	72
 
 
 
@@ -502,7 +495,7 @@ MessageLineLength	72
 # comment this section!
 
 # Outbound flavor for FFX files
-FFXDataFlav	"Normal"
+FFXDataFlav	"Hold"
 
 # Compression programs for ffx
 #
@@ -525,4 +518,4 @@ FFXUncompress	gunzip		/bin/gunzip -cq
 
 # Sendmail command for ffxrmail
 #
-FFXRmailSendmail  /usr/sbin/sendmail -oee -oi -pFFX:morannon.fido.de
+FFXRmailSendmail  /usr/sbin/sendmail -oee -oi -pFFX:orodruin.fido.de
