--- a/examples/morannon/fidogate.conf
+++ b/examples/morannon/fidogate.conf
@@ -1,8 +1,8 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.4 1999/06/20 13:49:47 mj Exp $
+# $Id: fidogate.conf,v 4.5 1999/11/21 17:25:29 mj Exp $
 #
-# NEW!!! (FIDOGATE 4.3.0+) single common config file
+# NEW!!! (FIDOGATE 4.3.5) single common config file
 #
 # morannon.fido.de (Fido.DE domain gateway)
 #
@@ -27,7 +27,6 @@ BTBASEDIR	/var/spool/bt
 INBOUND		%B/in
 PINBOUND	%B/pin
 UUINBOUND	%B/uuin
-#FTPINBOUND	%B/ftpin
 
 # files		
 ALIASES		%C/aliases
@@ -53,8 +52,7 @@ LogLevel	notice
 DosDrive	H:	/home
 DosDrive	I:	/var/spool
 DosDrive	I:	/usr/spool
-DosDrive	P:	/u1
-DosDrive	Q:	/pub
+DosDrive	P:	/pub
 
 
 # AREAS.BBS EchoMail distribution list
@@ -87,7 +85,7 @@ Address		242:1000/1
 Address		242:1000/2
 Address		242:1000/0
 Address		124:1249/9999
-Address		49:305/1.200
+Address		44:4932/605
 
 # optional (different) gateway address, same as `ADDRESS' if missing
 GateAddress	2:2452/110.1
@@ -96,7 +94,7 @@ GateAddress	242:4900/99
 GateAddress	242:4900/99
 GateAddress	242:4900/99
 GateAddress	124:1249/9999.1
-GateAddress	49:305/1.200
+GateAddress	44:4932/605
 
 
 # zones and domains, the outbound directory is relative to the one
@@ -113,6 +111,7 @@ Zone	4	.fidonet.org		fidonet		out.004
 Zone	5	.fidonet.org		fidonet		out.005
 Zone	6	.fidonet.org		fidonet		out.006
 Zone	21	.gernet.heise.de	gernet		out.015
+Zone	44	-			-		out.02c
 Zone    124     .cm.org                 cm              out.07c
 Zone	242	.Fido.DE		fidode		out.0f2
 
@@ -126,7 +125,7 @@ Zone	242	.Fido.DE		fidode		out.0f2
 AreaFixMailer	/usr/sbin/sendmail -t
 
 # CC of reply mails
-AreaFixCc	postmaster@morannon.fido.de
+#AreaFixCc	postmaster@morannon.fido.de
 
 # Location of help file
 AreaFixHelp	%L/areafix.help
@@ -347,10 +346,10 @@ LimitMsgSize		2048000
 #NoAddressInToField
 
 # CC of bounced messages
-BounceCCMail		postmaster@morannon.fido.de
+BounceCCMail		admin-bounce@morannon.fido.de
 
 # Send mail from message trackers to
-TrackerMail		postmaster@morannon.fido.de
+TrackerMail		admin-bounce@morannon.fido.de
 
 # Restrict gateway usage to FTN nodes registered in HOSTS
 HostsRestricted
@@ -401,7 +400,7 @@ RFCLevel		1
 # sendmail program path and parameters
 #
 #    %s is replaced with the envelope sender
-FTNInSendmail	/usr/sbin/sendmail -odb -oee -oi -f%s -pFIDOGATE:morannon-ftn.fido.de -t
+FTNInSendmail	/usr/sbin/sendmail -odb -oee -oi -f%s -pFIDOGATE:gate.fido.de -t
 
 # rnews program path
 FTNInRnews	/usr/bin/rnews
@@ -430,7 +429,7 @@ DontUseReplyTo
 #
 #    (), p, 0   -    user@do.main (Real Name)
 #    <>, a, 1   -    Real Name <user@do.main>
-RFCAddrMode <>
+RFCAddrMode ()
 
 # Force ^AREPLYADDR to only contain ^AREPLYADDR <user@do.main>
 # to be compatible with ifmail-TX
@@ -456,13 +455,19 @@ DefaultCharset	x-ibmpc:iso-8859-1:iso-8859-1
 # Charset mapping for NetMail
 NetMailCharset	x-ibmpc:iso-8859-1:iso-8859-1
 
+# If set and no matching in/out charset is found, ftn2rfc will use
+# the first charset translation pair from charset.map with
+# in charset = Fido ^ACHRS
+# NOT YET IMPLEMENTED
+NetMailCharsetUse1st
+
 
 # The STRING which FIDOGATE's ftn2rfc adds to the Path header,
 # normally "not-for-mail". If gated messages are not generally
 # exported to the Usenet, setting it to "fidogate!not-for-mail" makes
 # the INN newsfeeds entry easier and less error-prone.
-#NewsPathTail	"fidogate!not-for-mail"
-NewsPathTail	"not-for-mail"
+#NewsPathTail	"not-for-mail"
+NewsPathTail	"fidogate!not-for-mail"
 
 
 # Regular expression patterns for finding addresses in the first line
@@ -482,8 +487,13 @@ Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]*) (writes|wrote|schreibt|schrieb)
 Regex1stLine  ^On ..., .. ... .... ..:..:.. [+\-]...., (.*) (writes|wrote|schreibt|schrieb):$
 Regex1stLine  ^On .. ... .... ..:..:.. [+\-]...., (.*) (writes|wrote|schreibt|schrieb):$
 # This is very generic, thus it must be the last entry.
-# If this regex yields too many errors, comment it.
+# If this regex yields too many errors, comment it out.
 Regex1stLine  ^[ 	]*([^>|].*) (writes|wrote|schreibt|schrieb):$
+
+
+# Line length for formatting long paragraphs in Fido messages
+# (replaces old MAX_LINELEN from config.h)
+MessageLineLength	72
 
 
 
