--- a/examples/orodruin/fidogate.conf
+++ b/examples/orodruin/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.8 1999/10/04 08:18:17 mj Exp $
+# $Id: fidogate.conf,v 4.9 1999/11/21 17:25:32 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -457,6 +457,7 @@ NetMailCharset	x-ibmpc:latin-1:iso-8859-1
 # If set and no matching in/out charset is found, ftn2rfc will use
 # the first charset translation pair from charset.map with
 # in charset = Fido ^ACHRS
+# NOT YET IMPLEMENTED
 NetMailCharsetUse1st
 
 
