--- a/test/cf/fidogate.conf
+++ b/test/cf/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.6 1999/06/20 13:49:51 mj Exp $
+# $Id: fidogate.conf,v 4.7 2000/11/18 12:18:42 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -489,24 +489,9 @@ Regex1stLine  ^[ 	]*([^>|].*) (writes|wrote|schreibt|schrieb):$
 # Outbound flavor for FFX files
 FFXDataFlav	"Normal"
 
-# Compression programs for ffx
-#
-# Compressed data files
-FFXDataCompr	"/bin/gzip -c9"
-FFXDataExt	".gz"
-FFXDataDecompr	"gunzip"
-# Uncompressed data files
-FFXDataComprN	"/bin/cat"
-FFXDataExtN	""
-FFXDataDecomprN	""
-
 # FFX commands
-FFXCommand	rmail		%L/ffxrmail
-FFXCommand	rnews		/usr/bin/rnews
-FFXCommand	unbatchzip	/usr/bin/unzip -ojqq
-
-FFXUncompress	unzip		/usr/bin/unzip -pqq
-FFXUncompress	gunzip		/bin/gunzip -cq
+FFXCommand	rmail		%S/rxxxx
+FFXCommand	rnews		%S/rxxxx
 
 # Sendmail command for ffxrmail
 #
