--- a/test/cf/fidogate.conf
+++ b/test/cf/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.7 2000/11/18 12:18:42 mj Exp $
+# $Id: fidogate.conf,v 4.8 2000/11/18 17:57:56 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -494,5 +494,5 @@ FFXCommand	rmail		%S/rxxxx
 FFXCommand	rnews		%S/rxxxx
 
 # Sendmail command for ffxrmail
-#
+# -pFFX:RELAY substituted with real sender FQDN by ffxrmail
 FFXRmailSendmail  /usr/sbin/sendmail -oee -oi -pFFX:morannon.fido.de
