--- a/examples/orodruin/fidogate.conf
+++ b/examples/orodruin/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.10 2000/11/18 12:18:42 mj Exp $
+# $Id: fidogate.conf,v 4.11 2000/11/18 17:57:56 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -511,5 +511,5 @@ FFXCommand	rnews		/usr/bin/rnews
 FFXCommand	unbatchzip	/usr/bin/unzip -ojqq
 
 # Sendmail command for ffxrmail
-#
+# -pFFX:RELAY substituted with real sender FQDN by ffxrmail
 FFXRmailSendmail  /usr/sbin/sendmail -oee -oi -pFFX:morannon.fido.de
