--- a/test/cf/fidogate.conf
+++ b/test/cf/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.8 2000/11/18 17:57:56 mj Exp $
+# $Id: fidogate.conf,v 4.9 2001/05/28 15:09:25 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -474,6 +474,8 @@ Regex1stLine  ^(.* \([a-z0-9_.\-]*@[a-z0-9_.\-]*\)) (writes|wrote|schreibt|schri
 Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]*) (writes|wrote|schreibt|schrieb)
 Regex1stLine  ^On ..., .. ... .... ..:..:.. [+\-]...., (.*) (writes|wrote|schreibt|schrieb):$
 Regex1stLine  ^On .. ... .... ..:..:.. [+\-]...., (.*) (writes|wrote|schreibt|schrieb):$
+# User-Agent: slrn/0.9.7.0 (Linux)
+Regex1stLine  ^<([^<>@]*)><.*@.*> (writes|wrote|schreibt|schrieb):$
 # This is very generic, thus it must be the last entry.
 # If this regex yields too many errors, comment it.
 Regex1stLine  ^[ 	]*([^>|].*) (writes|wrote|schreibt|schrieb):$
