--- a/examples/morannon/fidogate.conf
+++ b/examples/morannon/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.5 1999/11/21 17:25:29 mj Exp $
+# $Id: fidogate.conf,v 4.6 2001/05/28 15:09:24 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.5) single common config file
 #
@@ -486,6 +486,8 @@ Regex1stLine  ^(.* \([a-z0-9_.\-]*@[a-z0-9_.\-]*\)) (writes|wrote|schreibt|schri
 Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]*) (writes|wrote|schreibt|schrieb)
 Regex1stLine  ^On ..., .. ... .... ..:..:.. [+\-]...., (.*) (writes|wrote|schreibt|schrieb):$
 Regex1stLine  ^On .. ... .... ..:..:.. [+\-]...., (.*) (writes|wrote|schreibt|schrieb):$
+# User-Agent: slrn/0.9.7.0 (Linux)
+Regex1stLine  ^<([^<>@]*)><.*@.*> (writes|wrote|schreibt|schrieb):$
 # This is very generic, thus it must be the last entry.
 # If this regex yields too many errors, comment it out.
 Regex1stLine  ^[ 	]*([^>|].*) (writes|wrote|schreibt|schrieb):$
