--- a/scripts/maintenance/Makefile
+++ b/scripts/maintenance/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.12 2004/03/08 21:44:37 n0ll Exp $
+#    $Id: Makefile,v 4.13 2004/08/20 21:21:38 n0ll Exp $
 #
 #    Makefile for FIDOGATE scripts/filebase/
 #
@@ -28,6 +28,7 @@ $(PROGS):	$(TOPDIR)/config.make $(TOPDIR)/config.pl
 
 install:
 	$(INSTALL_PROG) logsendmail $(PREFIX)$(BINDIR)
+	$(INSTALL_PROG) logsendmail2 $(PREFIX)$(BINDIR)
 	$(INSTALL_PROG) logreport $(PREFIX)$(BINDIR)
 	$(INSTALL_PROG) logstat $(PREFIX)$(BINDIR)
 	$(INSTALL_PROG) logdaily $(PREFIX)$(BINDIR)
